# APKIUM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  ROADMAP.md
.cargo/: config.toml
assets/theme/: colors.css
crates/android-toolchain/: Cargo.toml
crates/android-toolchain/src/: detector.rs  downloader.rs  env.rs  jdk.rs  lib.rs  ndk.rs  sdk_manager.rs
crates/build-engine/: Cargo.toml
crates/build-engine/src/: apk.rs  cargo_build.rs  config.rs  gradle_build.rs  lib.rs  runner.rs  signing.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  events.rs  lib.rs  orchestrator.rs  project.rs  workspace.rs
crates/editor/: Cargo.toml
crates/editor/src/: buffer.rs  commands.rs  cursor.rs  lib.rs  selection.rs  syntax.rs
crates/emulator-bridge/: Cargo.toml
crates/emulator-bridge/src/: adb.rs  avd.rs  device.rs  emulator.rs  lib.rs  logcat.rs
crates/manifest-manager/: Cargo.toml
crates/manifest-manager/src/: components.rs  intent_filters.rs  lib.rs  manifest.rs  parser.rs  permissions.rs  writer.rs
crates/ui/: Cargo.toml  build.rs  theme.slint
crates/ui/src/: app.rs  lib.rs  theme.rs
crates/ui/ui/: main.slint
installer/: build_all.py  build_installer.py  requirements.txt
src/: commands.rs  lib.rs  main.rs  project.rs
