[package]
name = "r-droid"
version = "0.1.0"
edition = "2021"
authors = ["R-Droid Team"]
description = "R-Droid 2026 - Pure Rust Android IDE"
license = "MIT"
repository = "https://github.com/r-droid/r-droid"

[workspace]
members = [
    "crates/core",
    "crates/ui",
    "crates/editor",
    "crates/android-toolchain",
    "crates/manifest-manager",
    "crates/emulator-bridge",
    "crates/build-engine",
]

[dependencies]
# Workspace crates
r-droid-core = { path = "crates/core" }
r-droid-ui = { path = "crates/ui" }
r-droid-editor = { path = "crates/editor" }
r-droid-android-toolchain = { path = "crates/android-toolchain" }
r-droid-manifest-manager = { path = "crates/manifest-manager" }
r-droid-emulator-bridge = { path = "crates/emulator-bridge" }
r-droid-build-engine = { path = "crates/build-engine" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
