[package]
name = "r-droid-android-toolchain"
version = "0.1.0"
edition = "2021"
description = "Android SDK/NDK/JDK detection, download, and management for R-Droid IDE"

[dependencies]
r-droid-core = { path = "../core" }
tokio = { version = "1.35", features = ["full", "process"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
directories = "5.0"
which = "6.0"
regex = "1.10"
tempfile = "3.9"
