[package]
name = "r-droid-android-toolchain"
version = "0.1.0"
edition = "2021"
description = "Android SDK/NDK/JDK detection, download, and management for R-Droid IDE"

[dependencies]
r-droid-core = { path = "../core" }
tokio = { workspace = true, features = ["process"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json", "stream"] }
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
directories = "5.0"
which = "6.0"
regex = "1.10"
tempfile = "3.9"
