[package]
name = "r-droid-build-engine"
version = "0.1.0"
edition = "2021"
description = "Android Build Engine for R-Droid IDE"
license = "MIT"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Path handling
walkdir = "2.4"
glob = "0.3"

# ZIP for APK manipulation
zip = "0.6"

# Regex for parsing
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
