[package]
name = "r-droid-core"
version = "0.1.0"
edition = "2021"
description = "Core orchestrator and shared types for R-Droid IDE"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
once_cell = "1.19"
parking_lot = "0.12"
crossbeam-channel = "0.5"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
