[package]
name = "r-droid-core"
version = "0.1.0"
edition = "2021"
description = "Core orchestrator and shared types for R-Droid IDE"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
once_cell = "1.19"
parking_lot = "0.12"
crossbeam-channel = "0.5"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
