[package]
name = "r-droid-editor"
version = "0.1.0"
edition = "2021"
description = "High-performance code editor for R-Droid IDE"

[dependencies]
r-droid-core = { path = "../core" }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
ropey = "1.6"  # Rope data structure for efficient text editing
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-kotlin = "0.3"
tree-sitter-java = "0.21"
tree-sitter-xml = "0.6"
unicode-segmentation = "1.10"
unicode-width = "0.1"
