[package]
name = "r-droid-editor"
version = "0.1.0"
edition = "2021"
description = "High-performance code editor for R-Droid IDE"

[dependencies]
r-droid-core = { path = "../core" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
parking_lot = "0.12"
ropey = "1.6"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-kotlin = "0.3"
tree-sitter-java = "0.21"
tree-sitter-xml = "0.6"
unicode-segmentation = "1.10"
unicode-width = "0.1"
