[package]
name = "r-droid-emulator-bridge"
version = "0.1.0"
edition = "2021"
description = "Android Emulator Bridge for R-Droid IDE"
license = "MIT"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Process management
tokio-process = "0.2"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# HTTP client for REST API
reqwest = { version = "0.11", features = ["json"] }

# INI parsing (for AVD config)
configparser = "3.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
