[package]
name = "rdroid-manifest-manager"
version = "0.1.0"
edition = "2021"
description = "Android Manifest and Permission Manager for R-Droid IDE"
license = "MIT"

[dependencies]
# Async runtime
tokio = { workspace = true }

# XML parsing
quick-xml = { version = "0.31", features = ["serialize"] }
roxmltree = "0.19"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
indexmap = { version = "2.1", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
