[package]
name = "r-droid-ui"
version = "0.1.0"
edition = "2021"
description = "UI components for R-Droid IDE using Slint"
build = "build.rs"

[dependencies]
slint = "1.3"
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
r-droid-core = { path = "../core" }
parking_lot = "0.12"
once_cell = "1.19"
image = "0.24"

[build-dependencies]
slint-build = "1.3"
